# Algorithm-for-Physics

DataFileProcessLibrary/: JSONParse.h  jsonTest1  jsonTest1.cpp  new_test.json  paramInput  paramInput.cpp  paramInput.h  test.json
DataFileProcessLibrary/old/: jsoncpp的替身  my_file.cpp
GoldTrash/cpp_test/: cpp_string.cpp  cpp_test_arg.cpp  cpp_test_list.cpp  cpp_test_map.cpp  cpp_test_stringOperatorLess.cpp  cpp_test_union.cpp  stringLess  testList
GoldTrash/json/: a.json  test.json  test_json  test_json.cpp
GoldTrash/unused/: StrBox.cpp  StrBox.h  StrClass.cpp  StrClass.h  genCharValue.py  genSeq  main  seq  seq.cpp
Homework/: Makefile  Molecular Structure Comparison.pptx  STATUS_CODE.h  connect_ssh.sh  my_math.c
Homework/10_HW20171208/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Homework/10_HW20171208/src/: AtomGroup.cpp  AtomGroup.h  CMakeLists.txt  Interaction.cpp  Interaction.h  Makefile  cmake_install.cmake  main.cpp  pdbAnalyser.cpp  pdbAnalyser.h  terminal_IO.cpp  terminal_IO.h
Homework/10_HW20171208/src/MyVector/: CMakeLists.txt  Makefile  MyVector.h  cmake_install.cmake
Homework/1_HW20170929/: Makefile  calculate_gcd  calculate_gcd.cpp
Homework/2_HW20170930/: CONSTANT.h  Makefile  random_walk  random_walk.c
Homework/2_HW20170930/data_random_walk/: simulation - 1
Homework/3_HW20171013/: Makefile  README.md  monte_carlo_walk  monte_carlo_walk.c
Homework/4_HW20171027/: MyString.cpp
Homework/5_HW20171103/: Makefile  MyVector.cpp  testMyVector
Homework/6_HW20171110/: Makefile  README.md  result.json  result.txt  stringCount
Homework/6_HW20171110/src/: Makefile  terminal_IO.h
Homework/7_HW20171117/: CMakeCache.txt  Makefile  cmake_install.cmake  new_result.txt
Homework/7_HW20171117/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Homework/7_HW20171117/src/AutoSimulation/: AutoSimulation.cpp  CMakeLists.txt  Makefile  cmake_install.cmake
Homework/7_HW20171117/src/Ising/: CMakeLists.txt  Ising.cpp  Makefile  cmake_install.cmake  terminal_IO.cpp
Homework/8_HW20171124/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  作业说明.txt
Homework/8_HW20171124/src/: Makefile  cmake_install.cmake
Homework/8_HW20171124/src/DistDistribution/: CMakeLists.txt  Makefile  cmake_install.cmake  n=1000.nb  result.txt
Homework/8_HW20171124/src/RandomWalk/: CMakeLists.txt  Makefile  cmake_install.cmake
Homework/8_HW20171124/src/TimeDistribution/: CMakeLists.txt  Makefile  cmake_install.cmake  terminal_IO.h
Homework/9_HW20171201/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
Homework/9_HW20171201/src/: Makefile  Particle.cpp  cmake_install.cmake  terminal_IO.h
Homework/9_HW20171201/src/MyVector/: CMakeLists.txt  Makefile  MyVector.h  cmake_install.cmake
Homework/HW20170929/: Makefile  calculate_gcd.cpp
Homework/HW20170930/: Makefile  README.md  random_walk  random_walk.c
Homework/HW20171013/: Makefile  monte_carlo_walk  monte_carlo_walk.c
Homework/HW20171027/: Makefile  README.md  testMyString
Homework/HW20171103/: Makefile  MyVector.cpp  MyVector.h  README.md  testMyVector  testMyVector.cpp
Homework/HW20171110/src/: StrMap.cpp  StrMap.h  main.cpp  terminal_IO.cpp
Homework/HW20171117/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  upload_homework.sh
Homework/HW20171117/eigen_learning/: CMakeCache.txt  CMakeLists.txt  Eigen.md  Makefile  practice1  practice1.cpp  practice2.cpp  practice3  practice4  practice5  practice5.cpp  practice6.cpp
Homework/HW20171117/src/: Makefile  cmake_install.cmake
Homework/HW20171117/src/AutoSimulation/: Makefile  cmake_install.cmake  terminal_IO.cpp  terminal_IO.h
Homework/HW20171117/src/Ising/: Config.h  Config.h.in  ConvergenceMonitor.cpp  ConvergenceMonitor.h  Ising.h  IsingSimulation.cpp  Makefile  cmake_install.cmake  terminal_IO.h
Homework/HW20171124/: CMakeCache.txt  CMakeLists.txt  Makefile  RANDOMWORK.cbp  cmake_install.cmake
Homework/HW20171124/src/: CMakeLists.txt  Makefile  cmake_install.cmake
Homework/HW20171124/src/DistDistribution/: DistDistribution.cpp  Makefile  cmake_install.cmake  data.numbers  terminal_IO.cpp  terminal_IO.h
Homework/HW20171124/src/MyVector/: Makefile  cmake_install.cmake  testMyVector.cpp
Homework/HW20171124/src/RandomWalk/: Makefile  RandomWalk.cpp  RandomWalk.h  cmake_install.cmake  testRandomWalk.cpp
Homework/HW20171124/src/TimeDistRelation/: CMakeLists.txt  Makefile  cmake_install.cmake  terminal_IO.cpp  terminal_IO.h
Homework/HW20171124/src/TimeDistribution/: Makefile  TimeDistribution.cpp  cmake_install.cmake  terminal_IO.cpp
Homework/HW20171201/: CMakeCache.txt  Makefile  cmake_install.cmake  generateFlash.m
Homework/HW20171201/src/: CMakeLists.txt  Makefile  Particle.h  SingleBrown.cpp  cmake_install.cmake  terminal_IO.cpp
Homework/HW20171201/src/MyVector/: Makefile  MyVector.cbp  cmake_install.cmake
Homework/Project/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
Homework/Project/src/: Makefile  StructComp.cpp  StructComp.h  main.cpp  (+2 more)
Homework/Project_MoleculeStructureCompare/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Report.pptx  cmake_install.cmake
Homework/Project_MoleculeStructureCompare/src/: CMakeLists.txt  Makefile  StructComp.cpp  StructComp.h  cmake_install.cmake  main.cpp  terminal_IO.h
Homework/Project_MoleculeStructureCompare/src/Combination/: CMakeLists.txt  Combination.h  Makefile  cmake_install.cmake  testCombination.cpp
Homework/Project_MoleculeStructureCompare/src/Permutation/: CMakeLists.txt  Makefile  Permutation.cpp  Permutation.h  cmake_install.cmake  testPermutation.cpp
Homework/eigen_learning/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  practice2  practice3.cpp  practice4.cpp  practice6  practice7  practice7.cpp
Parallel/: Parallel.cpp  Parallel.py  Parallel_cpp
SeeDNA/SeeDNA-1.0/: AUTHORS  Makefile.am  Makefile.in  NEWS  configure
SeeDNA/SeeDNA-1.1/: Makefile  README  SeeDNA1.glade.bak  SeeDNA1.glade.bakp  aclocal.m4  config.h  config.status  configure.in
(+67 files in other folders)
